--- a/PYTHON/python_2_anna_wojtczak.ipynb
+++ b/PYTHON/python_2_anna_wojtczak.ipynb
@@ -5,7 +5,7 @@
    "id": "316575a2",
    "metadata": {},
    "source": [
-    "# Zadanie 1 (4pkt)\n",
+    "# Zadanie 1 \n",
     "\n",
     "Napisz funkcję create_tower, która jako input przyjmuje integera większego od 0 i która printuje \"piramidę\" z gwiazdek z taką liczbą pięter jak podany integer:\n",
     "\n",
@@ -53,7 +53,7 @@
    "id": "7536bc54",
    "metadata": {},
    "source": [
-    "# Zadanie 2 (6 pkt)\n",
+    "# Zadanie 2 \n",
     "\n",
     "### Napisz gre \"kółko i krzyżyk\"\n",
     "\n",
@@ -243,7 +243,7 @@
    "id": "2bcfa122",
    "metadata": {},
    "source": [
-    "# Zadanie 3 (10 pkt)\n",
+    "# Zadanie 3\n",
     "\n",
     "Pobierz zbiór danych o zawodnikach NBA: https://www.kaggle.com/justinas/nba-players-data\n",
     "\n",
